--- a/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
@@ -32,11 +32,11 @@
 
             <div class="item-control" style="clear: none">
               <label class="item-title">2, Họ và tên <span class="star">*</span></label>
-              <input name="fullName" type="text" formControlName="fullName" text-validator/>
+              <input name="fullName" type="text" formControlName="fullName" required />
 
-              <div class="star" *ngIf="(!formCV.controls.fullName.errors.valid)">
-                {{messageError.fullName}}
-              </div>
+              <!--<div class="star" *ngIf="(!formCV.controls.fullName.errors.valid)">-->
+                <!--{{messageError.fullName}}-->
+              <!--</div>-->
 
 
             </div>
@@ -51,45 +51,33 @@
             <label class="item-title">4, Ngày sinh <span class="star">*</span></label>
             <input type="date" style="width: 30%;margin-right: 20px"
                    [value]="infoBasic.birthDay | date:'yyyy-MM-dd'" required
-                   formControlName="birthDay" #birthDay text-validator/>
+                   formControlName="birthDay" #birthDay />
 
-            <div class="star" *ngIf="(!formCV.controls.birthDay.errors.valid )">
-              {{messageError.birthDay}}
-            </div>
+            <!--<div class="star" *ngIf="(!formCV.controls.birthDay.errors.valid )">-->
+              <!--{{messageError.birthDay}}-->
+            <!--</div>-->
 
             <label class="item-title">5, Giới tính <span class="star">*</span></label>
-            <select formControlName="sex" class="form-control" #sex type="select" text-validator>
-              <option value="0"> ----Chọn----</option>
+            <select formControlName="sex" class="form-control" #sex type="select" >
               <option value="1">Nam</option>
               <option value="2">Nữ</option>
               <option value="2">Khác</option>
             </select>
 
-            <div class="star" *ngIf="!formCV.controls.sex.errors.valid">
-              {{messageError.sex}}
-            </div>
+            <!--<div class="star" *ngIf="!formCV.controls.sex.errors.valid">-->
+              <!--{{messageError.sex}}-->
+            <!--</div>-->
 
           </div>
 
 
           <div class="item-control">
             <label class="item-title">6,Email <span class="star">*</span></label>
-            <input type="email" formControlName="email" style="width: 30%;margin-right: 20px" required
-                   #email email-validator/>
+            <input type="email" formControlName="email" pattern="^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$" style="width: 30%;margin-right: 20px" required
+                   #email />
 
-            <div class="star" *ngIf="(!formCV.controls.email.errors.emailValid )
-                && (formCV.controls.email.dirty || formCV.controls.email.touched)">
-              {{messageError.mail}}
-            </div>
-
-
-            <label class="item-title">7,Điện thoại <span class="star">*</span></label>
-            <input type="text" style="width: 200px" formControlName="phone" required #phone>
-
-            <div class="star" *ngIf="(formCV.controls.phone.invalid || phone.value === '0' )
-                && (formCV.controls.phone.dirty || formCV.controls.phone.touched)">
-              {{messageError.phone}}
-            </div>
+            <label class="item-title" >7,Điện thoại <span class="star">*</span></label>
+            <input type="text" style="width: 200px" formControlName="phone" pattern="[0-9]*" required #phone>
 
           </div>
 
@@ -107,15 +95,15 @@
       <div class="col-xs-12 col-sm-4">
         <div class="item-control pdt-i-0">
           <label><span>Phường/xã   </span> </label>
-          <select formControlName="guild" #guidBithDay class="form-control" 
-		  required type="select" text-validator 
+          <select formControlName="guild" #guidBithDay class="form-control"
+		  required type="select"
 		  >
              <option *ngFor="let item of listGuidBirthDay" [value]="item['ID']">{{item['Title']}}</option>
           </select>
 
-          <div class="star" *ngIf="(!formCV.controls.placeBirth.controls.guild.errors.valid)">
-            {{messageError.guild}}
-          </div>
+          <!--<div class="star" *ngIf="(!formCV.controls.placeBirth.controls.guild.errors.valid)">-->
+            <!--{{messageError.guild}}-->
+          <!--</div>-->
 
         </div>
       </div>
@@ -123,29 +111,29 @@
         <div class="item-control pdt-i-0">
           <label>Quận/Huyện </label>
           <select formControlName="district" class="form-control" #districtBirthDay required type="select"
-		  text-validator 
+
 		   (change)="districtBirthDayChange(districtBirthDay.value,cityBirthDay.value)">
            <option *ngFor="let item of listDistrictBirthDay" [value]="item['ID']">{{item['Title']}}</option>
           </select>
         </div>
 
-        <div class="star" *ngIf="(!formCV.controls.placeBirth.controls.district.errors.valid)">
-          {{messageError.district}}
-        </div>
+        <!--<div class="star" *ngIf="(!formCV.controls.placeBirth.controls.district.errors.valid)">-->
+          <!--{{messageError.district}}-->
+        <!--</div>-->
 
       </div>
       <div class="col-xs-12 col-sm-4">
         <div class="item-control pdt-i-0">
           <label>Tình/TP </label>
-          <select formControlName="city" class="form-control"  
-		  required type="select" text-validator #cityBirthDay (change)="cityBirthDayChange(cityBirthDay.value)" >
+          <select formControlName="city" class="form-control"
+		  required type="select"  #cityBirthDay (change)="cityBirthDayChange(cityBirthDay.value)" >
             <option *ngFor="let item of listCity" [value]="item['ID']">{{item['Title']}}</option>
           </select>
         </div>
 
-        <div class="star" *ngIf="!formCV.controls.placeBirth.controls.city.errors.valid">
-          {{messageError.city}}
-        </div>
+        <!--<div class="star" *ngIf="!formCV.controls.placeBirth.controls.city.errors.valid">-->
+          <!--{{messageError.city}}-->
+        <!--</div>-->
 
       </div>
     </div>
@@ -158,14 +146,14 @@
         <div class="item-control pdt-i-0">
           <!--<span>Noi sinh</span>-->
           <label><span>Phường/xã   </span> </label>
-          <select formControlName="guild" class="form-control" #homeTownGuid required type="select" text-validator>
+          <select formControlName="guild" class="form-control" #homeTownGuid required type="select" >
             <option value="0">----Chọn-----</option>
             <option value="Gia lam">Gia lam</option>
           </select>
 
-          <div class="star" *ngIf="!formCV.controls.homeTown.controls.guild.errors.valid">
-            {{messageError.guild}}
-          </div>
+          <!--<div class="star" *ngIf="!formCV.controls.homeTown.controls.guild.errors.valid">-->
+            <!--{{messageError.guild}}-->
+          <!--</div>-->
 
         </div>
       </div>
@@ -173,28 +161,23 @@
         <div class="item-control pdt-i-0">
           <label>Quận/Huyện </label>
           <select formControlName="district" class="form-control" #homeTownDistrict required type="select"
-                  text-validator>
+                  >
             <option value="0" selected>----Chọn-----</option>
             <option value="Gia lam">Gia lam</option>
           </select>
 
-          <div class="star" *ngIf="(!formCV.controls.homeTown.controls.district.errors.valid)">
-            {{messageError.district}}
-          </div>
+          <!--<div class="star" *ngIf="(!formCV.controls.homeTown.controls.district.errors.valid)">-->
+            <!--{{messageError.district}}-->
+          <!--</div>-->
 
         </div>
       </div>
       <div class="col-xs-12 col-sm-4">
         <div class="item-control pdt-i-0">
           <label>Tình/TP </label>
-          <select formControlName="city" class="form-control" #homeTownCity type="select" text-validator>
-            <option value="0">----Chọn-----</option>
+          <select formControlName="city" class="form-control" #homeTownCity type="select" >
             <option value="Gia lam">Gia lam</option>
           </select>
-        </div>
-
-        <div class="star" *ngIf="(!formCV.controls.homeTown.controls.city.errors.valid)">
-          {{messageError.city}}
         </div>
 
       </div>
@@ -205,15 +188,9 @@
       <div class="col-xs-12 col-sm-4">
         <div class="item-control">
           <label class="item-title">10, Dân tộc </label>
-          <select class="form-control" formControlName="nation" type="select" required text-validator>
-            <option value="0">----chọn----</option>
+          <select class="form-control" formControlName="nation" type="select" required >
              <option [value]="item.name" *ngFor="let item of listNation  | orderBy: 'name'">{{item.name}}</option>
           </select>
-
-
-          <div class="star" *ngIf="!formCV.controls.nation.errors.valid">
-            {{messageError.nation}}
-          </div>
 
         </div>
       </div>
@@ -234,16 +211,12 @@
     <!--So chung minh thu-->
     <div class="row place" formGroupName="identity">
       <div class="col-xs-12">
-        <label class="item-title" style="width: auto">12, Số chứng minh thư <span class="star">*</span> </label>
+        <label class="item-title" style="width: auto" >12, Số chứng minh thư <span class="star">*</span> </label>
       </div>
       <div class="col-xs-12 col-sm-4">
         <div class="item-control pdt-i-0">
           <label class="hidden-xs"></label>
-          <input type="text" formControlName="identityNumber" required #identityNumber text-validator/>
-
-          <div class="star" *ngIf="(!formCV.controls.identity.controls.identityNumber.errors.valid)">
-            {{messageError.identityNumber}}
-          </div>
+          <input type="text" formControlName="identityNumber" minlength="6" pattern="[0-9]*" required #identityNumber />
 
         </div>
       </div>
@@ -252,11 +225,7 @@
         <div class="item-control pdt-i-0">
           <label>Ngày cấp </label>
           <input formControlName="dateRange" type="date"
-                 [value]="infoBasic.identity.dateRange | date:'yyyy-MM-dd'" required #dateRange text-validator/>
-
-          <div class="star" *ngIf="(!formCV.controls.identity.controls.dateRange.errors.valid )">
-            {{messageError.dateRange}}
-          </div>
+                 [value]="infoBasic.identity.dateRange | date:'yyyy-MM-dd'" required #dateRange />
 
         </div>
       </div>
@@ -264,11 +233,8 @@
       <div class="col-xs-12 col-sm-4">
         <div class="item-control pdt-i-0">
           <label>Nơi cấp </label>
-          <input formControlName="placeRange" type="text" required #placeRange text-validator/>
+          <input formControlName="placeRange" type="text" required #placeRange />
 
-          <div class="star" *ngIf="(!formCV.controls.identity.controls.placeRange.errors.valid )">
-            {{messageError.indentityNumber}}
-          </div>
 
         </div>
       </div>
@@ -280,12 +246,8 @@
         <div class="item-control">
           <label class="mgr-20 item-title" style="width:auto;">13, Nơi đăng kí hộ khẩu thường chú <span
             class="star">*</span></label>
-          <input style="width: 71%" type="text" formControlName="placeRegisterHouseHold" required text-validator/>
+          <input style="width: 71%" type="text" formControlName="placeRegisterHouseHold" required />
           <span style="display: block">(Số nhà đường thành phố /  Thôn xóm xã huyện tỉnh )</span>
-
-          <div class="star" *ngIf="!formCV.controls.placeRegisterHouseHold.errors.valid">
-            {{messageError.placeRegisterHouseHold}}
-          </div>
 
 
         </div>
@@ -312,8 +274,7 @@
       <div class="col-xs-12 col-sm-5">
         <div class="item-control">
           <label class="item-title mgr-20" style="width: auto">15, Nhóm máu </label>
-          <select formControlName="bloodGroup" class="form-control" required type="select" text-validator>
-            <option value="">----Chọn-----</option>
+          <select formControlName="bloodGroup" class="form-control" required type="select" >
             <option value="A">A</option>
             <option value="B">A</option>
             <option value="AB">AB</option>
@@ -321,9 +282,9 @@
           </select>
 
 
-          <div class="star" *ngIf="!formCV.controls.bloodGroup.errors.valid">
-            {{messageError.bloodGroup}}
-          </div>
+          <!--<div class="star" *ngIf="!formCV.controls.bloodGroup.errors.valid">-->
+            <!--{{messageError.bloodGroup}}-->
+          <!--</div>-->
 
         </div>
       </div>
@@ -336,18 +297,18 @@
       <div class="col-xs-12 col-sm-3">
         <div class="item-control">
           <label>Số nhà / Đội </label>
-          <input type="text" formControlName="numberHome">
+          <input type="text" formControlName="numberHome" required>
         </div>
       </div>
 
       <div class="col-xs-12 col-sm-3">
         <div class="item-control">
           <label>Đường/Thôn </label>
-          <input type="text" formControlName="street" required #street text-validator>
+          <input type="text" formControlName="street" required #street >
 
-          <div class="star" *ngIf="(!formCV.controls.placeNow.controls.street.errors.valid ) ">
-            {{messageError.street}}
-          </div>
+          <!--<div class="star" *ngIf="(!formCV.controls.placeNow.controls.street.errors.valid ) ">-->
+            <!--{{messageError.street}}-->
+          <!--</div>-->
 
         </div>
       </div>
@@ -355,38 +316,38 @@
       <div class="col-xs-12 col-sm-2">
         <div class="item-control">
           <label> <span>Phường/xã   </span> </label>
-          <select formControlName="guild" class="form-control" #placeNowG required type="select" text-validator>
+          <select formControlName="guild" class="form-control" #placeNowG required type="select" >
             <option value="0">----Chọn-----</option>
             <option value="Gia Lam">Gia Lam</option>
           </select>
-          <div class="star" *ngIf="(!formCV.controls.placeNow.controls.guild.errors.valid)">
-            {{messageError.guild}}
-          </div>
+          <!--<div class="star" *ngIf="(!formCV.controls.placeNow.controls.guild.errors.valid)">-->
+            <!--{{messageError.guild}}-->
+          <!--</div>-->
         </div>
       </div>
 
       <div class="col-xs-12 col-sm-2">
         <div class="item-control">
           <label>Quận/Huyện </label>
-          <select formControlName="district" class="form-control" #placeNowD required type="select" text-validator>
+          <select formControlName="district" class="form-control" #placeNowD required type="select" >
             <option value="0">----Chọn-----</option>
             <option value="1">----Chọn 1-----</option>
           </select>
-          <div class="star" *ngIf="(!formCV.controls.placeNow.controls.district.errors.valid)">
-            {{messageError.district}}
-          </div>
+          <!--<div class="star" *ngIf="(!formCV.controls.placeNow.controls.district.errors.valid)">-->
+            <!--{{messageError.district}}-->
+          <!--</div>-->
         </div>
       </div>
       <div class="col-xs-12 col-sm-2">
         <div class="item-control">
           <label>Tình/TP </label>
-          <select formControlName="city" class="form-control" #placeNowC required type="select" text-validator>
+          <select formControlName="city" class="form-control" #placeNowC required type="select" >
             <option value="0">----Chọn-----</option>
             <option value="1">1</option>
           </select>
-          <div class="star" *ngIf="(!formCV.controls.placeNow.controls.city.errors.valid)">
-            {{messageError.city}}
-          </div>
+          <!--<div class="star" *ngIf="(!formCV.controls.placeNow.controls.city.errors.valid)">-->
+            <!--{{messageError.city}}-->
+          <!--</div>-->
 
         </div>
       </div>
