--- a/src/app/personnels/form.css
+++ b/src/app/personnels/form.css
@@ -164,11 +164,11 @@ input:focus, select:focus {
   box-shadow: none;
 }
 
-/*input.ng-dirty, input.ng-invalid, input.ng-touched {
+input.ng-dirty.ng-invalid.ng-touched {
   border: 1px solid #ff3620;
 }
 
 
-/*input.ng-valid {*/
-  /*border: 1px solid rgb(204, 204, 204);*/
-/*}*/
+input.ng-valid {
+  border: 1px solid rgb(204, 204, 204) ;
+}
