--- a/src/app/personnels/info-person/foreign/foreign.component.html
+++ b/src/app/personnels/info-person/foreign/foreign.component.html
@@ -5,7 +5,7 @@
   <form>
     <div class="action-form" style="margin-bottom: 10px;">
       <button (click)="onSave()">Ghi nhận</button>
-      <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
+      <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
       </div>
     </div>
@@ -54,24 +54,27 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modal)">Thoát</button>
     </div>
+    <div *ngIf="message.condition && formNotValid " [ngClass]="'alert alert-'+ message.type">
+      {{message.content}}
+    </div>
   </modal-header>
   <modal-body>
-    <form action="" class="mgb-i-10" [formGroup]="formData">
+    <form action="" class="mgb-i-10" [formGroup]="formData" id="foreign-form">
       <div class="row">
         <div class="col-xs-12 col-sm-5 col-sm-offset-1 ">
           <div class="item-control">
             <label>Từ ngày </label>
-            <input type="date" formControlName="dateFrom">
+            <input type="date" formControlName="dateFrom" required>
           </div>
           <!---->
           <div class="item-control">
             <label>Đến ngày </label>
-            <input type="date" formControlName="dateEnd">
+            <input type="date" formControlName="dateEnd" required>
           </div>
           <!---->
           <div class="item-control">
             <label>Đi nước </label>
-            <select class="form-control" formControlName="national" style="width: 200px">
+            <select class="form-control" formControlName="national" style="width: 200px" required>
               <option *ngFor="let item of nationals" [value]="item.code">{{item.name}}</option>
             </select>
           </div>
@@ -80,7 +83,7 @@
         <div class="col-xs-12 col-sm-5 ">
           <div class="item-control">
             <label>Mục đích </label>
-            <input type="text" formControlName="purpose"/>
+            <input type="text" formControlName="purpose" required/>
           </div>
           <!---->
           <div class="item-control">
