--- a/src/app/personnels/info-person/salary-brief/salary-brief.component.html
+++ b/src/app/personnels/info-person/salary-brief/salary-brief.component.html
@@ -5,7 +5,7 @@
   <form [formGroup]="formMain">
     <div class="action-form">
       <button (click)="onSave()">Ghi nhận</button>
-       <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
+       <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
       </div>
     </div>
@@ -65,37 +65,39 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(modalSalary)">Thoát</button>
     </div>
+    <div *ngIf="message.condition && formNotValid " [ngClass]="'alert alert-'+ message.type">
+      {{message.content}}
+    </div>
   </modal-header>
 
   <modal-body>
-    <form action="" class="mgb-i-10" [formGroup]="formData">
+    <form action="" class="mgb-i-10" [formGroup]="formData" id="salary-brief">
       <div class="row">
         <div class="col-xs-12 col-sm-6">
 
           <div class="item-control">
             <label>Loại ngạch </label>
             <select name="specie" class="form-control" [(ngModel)]="speice" formControlName="specie"
-                    (change)="spieceChange()">
+                    (change)="spieceChange()" required>
               <option *ngFor="let item of spieceRanks" [value]="item">{{item}}</option>
             </select>
           </div>
           <!---->
           <div class="item-control">
             <label>Nhóm ngạch </label>
-            <select class="form-control" formControlName="group" [(ngModel)]="group" (change)="groupChange()">
-              <option value="">Nhóm ngạch</option>
+            <select class="form-control" formControlName="group" [(ngModel)]="group" (change)="groupChange()" required>
               <option *ngFor="let item of listGroup" [value]="item.group.name">{{item.group.name}}</option>
             </select>
           </div>
 
           <div class="item-control">
             <label>Từ ngày </label>
-            <input type="date" formControlName="dateFrom">
+            <input type="date" formControlName="dateFrom"  required>
           </div>
           <!---->
           <div class="item-control">
             <label>Đến ngày </label>
-            <input type="date" formControlName="dateEnd">
+            <input type="date" formControlName="dateEnd" required>
           </div>
           <!---->
 
@@ -105,21 +107,21 @@
         <div class="col-xs-12 col-sm-6">
           <div class="item-control">
             <label>Ngạch </label>
-            <select class="form-control" [(ngModel)]="rank" formControlName="rank" (change)="rankChange()">
+            <select class="form-control" [(ngModel)]="rank" formControlName="rank" (change)="rankChange()" required>
               <option *ngFor="let item of listRank" [value]="item">{{item}}</option>
             </select>
           </div>
           <!---->
           <div class="item-control">
             <label>Bậc </label>
-            <select class="form-control" [(ngModel)]="levelChoise" formControlName="level" (change)="levelChange()">
+            <select class="form-control" [(ngModel)]="levelChoise" formControlName="level" (change)="levelChange()" required>
               <option *ngFor="let item of level" [value]="item.name">{{item.name}}</option>
             </select>
           </div>
           <!---->
           <div class="item-control">
             <label> Số quyết định {{salary}} </label>
-            <input type="text" formControlName="numberDecide" >
+            <input type="text" formControlName="numberDecide" required>
           </div>
 
         </div>
