--- a/src/app/personnels/info-person/science-topic/science-topic.component.html
+++ b/src/app/personnels/info-person/science-topic/science-topic.component.html
@@ -6,7 +6,7 @@
     <div class="action-form" style="margin-bottom: 10px;">
       <button (click)="onSave()">Ghi nhận</button>
       <!--<button (click)="blockData()">Khóa dữ liệu</button>-->
-      <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
+      <div *ngIf="message.condition && formNotValid == false" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
       </div>
     </div>
@@ -60,31 +60,34 @@
     <div class="action-form mgb-i-10">
       <button (click)="closeModal(topicModal)">Thoát</button>
     </div>
+    <div *ngIf="message.condition && formNotValid" [ngClass]="'alert alert-'+ message.type">
+      {{message.content}}
+    </div>
   </modal-header>
 
   <modal-body>
-    <form action="" class="mgb-i-10" [formGroup]="formData">
+    <form action="" class="mgb-i-10" [formGroup]="formData" id="science-topic-form">
       <div class="row">
 
         <div class="col-xs-12 col-sm-6 ">
           <div class="item-control pdt-i-0">
             <label>Tên đề tài </label>
-            <input type="text" formControlName="name">
+            <input type="text" formControlName="name" required>
           </div>
 
           <div class="item-control">
             <label>Mã đề tài </label>
-            <input type="text" formControlName="code">
+            <input type="text" formControlName="code" required>
           </div>
           <!---->
           <div class="item-control">
             <label>Ngày bắt đầu</label>
-            <input type="date" formControlName="dateBegin">
+            <input type="date" formControlName="dateBegin" required>
           </div>
 
           <div class="item-control  ">
             <label class="mgr-20">Số tháng thực hiện</label>
-            <input type="number" formControlName="monthWork" style="width: 80px">
+            <input type="number" formControlName="monthWork" style="width: 80px" required>
           </div>
         </div>
 
@@ -92,18 +95,18 @@
 
           <div class="item-control pdt-i-0">
             <label>Vai trò trong đề tài</label>
-            <input type="text" formControlName="role">
+            <input type="text" formControlName="role" required>
           </div>
           <!---->
           <div class="item-control">
             <label>Cấp đề tài </label>
-            <input type="text" formControlName="level">
+            <input type="text" formControlName="level" required>
           </div>
           <!---->
           <!---->
           <div class="item-control">
             <label>Đánh giá loại </label>
-            <select formControlName="specieObtain" class="form-control">
+            <select formControlName="specieObtain" class="form-control" required>
               <option *ngFor="let item of speciesObtain" [value]="item">{{item}}</option>
             </select>
           </div>
